<resources>
    <string name="app_name">News_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="BBC">BBC News</string>
    <string name="DainikBhaskar">Dainik Bhaskar News</string>
    <string name="IndiaToday">India Today News</string>
    <string name="Jagran">Dainik Jagran News</string>
    <string name="AajTak">Aaj Tak News</string>
    <string name="NewYorkTimes">New York Times News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>